# ghost-protocol-faculty-preview

./: .gitignore  Makefile  README.md  faculty_preview_policy.yaml)  pyproject.toml  requirements.txt  setup.py
.github/workflows/: fuzz.yaml
attacks/: __init__.py  base.py  datasets.py  executors.py  metrics.py  mutators.py  sessions.py  strategies.py
bench_ab/: poison_maker.py  run_two_worlds.py
config/: attack_patterns.yaml  policy.yaml  response_templates.yaml
core/: ledger.py
demo/: demo_cli.py  faculty_demo.py  test_s1.py  verify_audit.py
demo/ui/: app.py  architecture_diagram.html
docs/: MASTER_PLAN.md
rag_guardrail/: __init__.py  pipeline.py  scanner.py
results/logs/: demo_audit.jsonl
results/runs/: detailed.json  summary.json
s2_dfa/: __init__.py  checker.py
s2_dfa/templates/: refusal_v1.json
s3_budget/: __init__.py  accountant.py
s4_audit/: __init__.py  crypto_receipts.py  verify_audit.py
scripts/: plot_results.py  run_adaptive_eval.py
sra/: __init__.py  audit_logger.py  audit_view.py  budget_tracker.py  compact_core.py  copper_ground.py  core.py  policy_engine.py  rag_guardrail.py  s1_detector.py  s2_templates.py  scoring.py  watcher.py
sra-demo/demo/: faculty_demo.py
tests/: test_dfa_guard.py  test_dp_accountant.py  test_rag_guardrail.py  test_receipts.py  test_s1_detector.py  test_watcher.py
watcher/: __init__.py  monitor.py  sprt.py
